# strix-shell

./: .gitignore  README.md  flake.nix  module.nix  overlay.nix
strix-shell-laptop/: app.in.vala  cfg.json  default.nix  meson.build  module.nix  style.scss
strix-shell-laptop/widgets/: Bar.vala  Menu.vala  PowerMenu.vala  Utils.vala
